# vscode-version-control-chat-ai

./: .gitignore  README.md  package-lock.json  package.json  webpack.config.js
d3/: index.html  script.js  w2.js
server/: .gitignore  pyproject.toml
server/src/: main.py
server/src/gitgpt_server/: app.py  prompt.py
src/: extension.ts  webviewPanel.ts
src/git-llm/: index.ts  llm.ts  prompt.ts  types.ts  utils.ts
src/webview/: webview.html  webview.js
src/webview/media/css/: style.css
