[project]
authors = [{name = "jimmyhealer", email = "yahing6066@gmail.com"}]
description = "Add a short description here"
name = "gitgpt-server"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["flask", "groq>=0.15.0,<0.16", "python-dotenv>=1.0.1,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
gitgpt_server = { path = ".", editable = true }

[tool.pixi.tasks]
serve = "python src/main.py"
